fix white space on index.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,7 @@ h2 {
 .info-container {
   display: flex;
   background-color: rgb(255, 213, 213);
-  min-height: 500px;
+  min-height: 550px;
   align-items: center;
   flex-direction: column;
 }
